welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {

avance()

def couleur(c: Color) {
setCouleurBrosse(c)
baisseBrosse()
leveBrosse()
}

couleur(color.RED)





}